--- a/React/index.html
+++ b/React/index.html
@@ -1,14 +1,21 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Vite App</title>
+    <meta
+      name="description"
+      content="مكتب صالح الحيسوني للمحاماة - خدمات قانونية متميزة في المملكة العربية السعودية"
+    />
+    <meta
+      name="keywords"
+      content="محاماة, قانون, استشارات قانونية, قضايا مدنية, السعودية"
+    />
+    <title>مكتب صالح الحيسوني للمحاماة - خدمات قانونية متميزة</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
