--- a/React/index.html
+++ b/React/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="مكتب صالح الحيسوني للمحاماة - خدمات قانونية متميزة في المملكة العربية السعودية"
+      content="شركة صالح الحيسوني للمحاماة - خدمات قانونية متميزة في المملكة العربية السعودية"
     />
     <meta
       name="keywords"
       content="محاماة, قانون, استشارات قانونية, قضايا مدنية, السعودية"
     />
-    <title>مكتب صالح الحيسوني للمحاماة - خدمات قانونية متميزة</title>
+    <title>شركة صالح الحيسوني للمحاماة - خدمات قانونية متميزة</title>
   </head>
   <body>
     <div id="root"></div>
