--- a/React/index.html
+++ b/React/index.html
@@ -2,6 +2,12 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/png" href="/logo_without_bg.png" />
     <link rel="apple-touch-icon" href="/logo_without_bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
